--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,10 @@
-name: firebase-storage
-description: A simple command-line application.
-# version: 1.0.0
-# homepage: https://www.example.com
+name: firebase_storage
+description: dart version of https://github.com/googleapis/nodejs-storage/
+version: 1.0.0
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.13.0-211.14.beta <3.0.0'
 
-#dependencies:
-#  path: ^1.7.0
+dependencies:
+  http: ^0.13.3
 
-dev_dependencies:
-  pedantic: ^1.9.0
