--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ dependencies:
   http: ^0.13.3
   intl: ^0.17.0
   crypto: ^3.0.1
+  rxdart: ^0.27.0
+  googleapis: ^2.0.0
+  googleapis_auth: ^1.1.0
 
 dev_dependencies:
   test: ^1.17.3
